# sdg-report

./: .gitignore  .nojekyll  README.md  chapter_1_methods.html  chapter_2_observatory.html  chapter_2b_jswsteel.html  chapter_3_comparison.html  chapter_4_theory.html  chapter_5_reports.html  combined_table3_table4_rempsyc.Rmd  combined_table3_table4_rempsyc.docx  config.yaml  example_output.md  index.html  india_sdg_sample_results.Rmd  india_sdg_sample_results.docx  india_south_africa_sdg_tables_palatino_9pt.Rmd  india_south_africa_sdg_tables_palatino_9pt.docx  main.py  model_performance_plots_template.Rmd  monitor.sh  notes.R  publishable_tables_india_south_africa.docx  publishable_tables_rempsyc_india_south_africa.Rmd  publishable_tables_rempsyc_india_south_africa.docx  pyproject.toml  run_all_reports.sh  run_jswsteel.sh  run_reports_rerun.sh  search.json  table3_table4_india_south_africa.md  table_india_benchmark.docx
analysis/: _quarto.yml  chapter_1_methods.qmd  chapter_2_observatory.qmd  chapter_2b_jswsteel.qmd  chapter_3_comparison.qmd  chapter_4_theory.qmd  chapter_5_reports.qmd  custom.scss  index.qmd
analysis/R/: download_helpers.R  load_evidence.R  network_helpers.R  plot_themes.R  (+1 more)
downloads/: comparison_quality.csv  coromandel_all_evidence.xlsx  coromandel_sdg_summary.csv  coromandel_top_evidence.csv  coromandel_top_evidence.xlsx  jswsteel_all_evidence.xlsx  jswsteel_sdg_summary.csv  jswsteel_sdg_summary.xlsx  jswsteel_top_evidence.csv  reports_index.xlsx  theory_drops_jswsteel.csv  theory_period_coromandel.xlsx
tests/: test_scoring.py  test_validation.py
(+40 files in other folders)
